# jsonofabitch

./: .gitignore  README.md  clean.sh  pyproject.toml  run_tests.sh  setup.py
jsonofabitch/: __init__.py  jark.py  jsonofabitch.lark  jsonofabitch.py  tests.py
tests/: performance.py  test_jsob.py  test_uqspecial.py
