[build-system]
requires = ["setuptools>=42",'lark']
build-backend = "setuptools.build_meta"

[project]
name = "jsonofabitch" 
dynamic=["version","license","keywords","description"]
authors = [
  { name="c mark0v", email="cmark0v@protonmail.com" },
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: File Formats :: JSON",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: File Formats",
]
[project.urls]
"Homepage" = "https://github.com/cmark0v/jsonofabitch/"
